@@ -4,8 +4,6 @@
 
 ======== Code ==========================================================
 
-(-) Update User's manual on the web
-
 (-) Move EXIT in all levels
 
 (-) Pulling
