@@ -1,3 +1,9 @@
+[3.February 2009]
+- doc/user_manual/usermanual.xml, Makefile:
+  I updated the User's manual (deleted sections about disabling Rubygems
+  and libraries which are distributed as part of Ruby's standard library);
+  also deleted unused images and updated one
+
 [2.February 2009]
 - initfv.rb: ScrollingCredits widget used in the menu (yeah! unlimited space
   for new developers! :) )
